[package]
authors = ["oldsheep68 <oldsheep68@hotmail.com>"]
edition = "2018"
readme = "README.md"
name = "opulo_z_center_home_bltouch"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
# cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
nb = "1"
#stm32f1 = {version ="0.15.1", features = ["rt"] }
stm32f1 = {version ="0.14.0" }
usb-device = "0.2.9"
usbd-serial = "0.1.1"
heapless = "0.7.5"
embedded-hal = { features = ["unproven"], version = "0.2.7" }
stm32f1xx-hal = {version = "0.9.0", features=["stm32f103", "rt", "stm32-usbd"]}

gcode = {version = "0.6.1", default-features = false }
arrayvec = { version ="0.7.2", default-features = false }

rtt-target = { version = "0.3.1", features = ["cortex-m"] }

ramp-maker = "0.2.0"
fixed = "1.9"

ryu = "1.0"
# minimal-lexical = "0.2"



[dev-dependencies]
# [features]
# device-selected = ["stm32f4xx-hal/stm32f411"]

# this lets you use `cargo fix`!
[[bin]]
name = "opulo_z_center_home_bltouch"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# features = ["stm32f411", "rt"]
